# medtech

./: .env.example  .gitignore  DEPLOY.md  DESIGN.md  PHASE_1_ARCHITECTURE.md  PHASE_2_BUILD_SEQUENCE.md  PHASE_3_DATA_ACQUISITION.md  PROJECT_STATUS.md  README.md  docker-compose.yml  render.yaml  skipped_sources.txt  sources.txt  sources_summary.txt
supabase/: apply_all.sql  config.toml
supabase/migrations/: 20260627093235_extensions.sql  20260627093236_schema.sql  20260627093237_rls.sql  20260628090000_geo_and_flags.sql
supabase/seed/: seed.sql
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx
web/app/(marketing)/: layout.tsx  page.tsx
web/app/(product)/: layout.tsx
web/app/admin/: layout.tsx  page.tsx
web/app/deck/: layout.tsx  page.tsx
web/components/: SiteFooter.tsx  SiteHeader.tsx
web/components/admin/: AdminNav.tsx
web/components/marketing/: FooterCTA.tsx  Hero.tsx  HowItWorks.tsx  WhyUs.tsx
web/components/product/: ClinicMiniMap.tsx  MapView.tsx  ResultsFilters.tsx  ResultsList.tsx  ResultsView.tsx  SearchBar.tsx
web/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ClinicLogo.tsx  Dialog.tsx  EmptyState.tsx  SearchInput.tsx  Select.tsx  Skeleton.tsx  Sparkline.tsx  Table.tsx  Tabs.tsx  Toast.tsx
web/lib/actions/: admin.ts
web/lib/queries/: admin.ts  catalog.ts  (+4 more)
worker/: Dockerfile  pyproject.toml
worker/app/: __init__.py  config.py  load.py  main.py  pipeline.py  supabase_client.py
worker/app/extract/: __init__.py
worker/app/fetch/: __init__.py
worker/app/normalize/: __init__.py  llm.py  match.py
worker/app/parse/: __init__.py
worker/app/robots/: __init__.py
worker/app/write/: __init__.py
worker/scripts/: coverage_report.py  db_report.py  drain_queue.py  enrich_2gis.py  geocode_clinics.py  validate_source.py
(+27 files in other folders)
