[project]
name = "medservice-worker"
version = "0.1.0"
description = "MedServicePrice.kz parsing engine — polls the Supabase parse_runs queue."
requires-python = ">=3.11"

# Phase 1 skeleton: only what the poll loop + Supabase connection need.
dependencies = [
    "supabase>=2.6",
    "python-dotenv>=1.0",
]

# Phase 2 (one source end-to-end) will add the pipeline stages:
#   playwright, httpx, pdfplumber, pymupdf, python-docx, openpyxl, pandas,
#   beautifulsoup4 / selectolax, and an LLM SDK for structured extraction.
[project.optional-dependencies]
pipeline = [
    "httpx>=0.27",
    "playwright>=1.49",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pandas>=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
