[project]
name = "medservice-worker"
version = "0.1.0"
description = "MedServicePrice.kz parsing engine — polls the Supabase parse_runs queue."
requires-python = ">=3.11"

# Poll loop + Supabase + the HTML pipeline (fetch/parse/extract/normalize/write).
dependencies = [
    "supabase>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "rapidfuzz>=3.9",
    "anthropic>=0.40",
]

# Non-HTML source types + JS-rendered pages land in a later pass.
[project.optional-dependencies]
pipeline = [
    "playwright>=1.49",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pandas>=2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
